--- a/xmlConfigurationConstructor/.classpath
+++ b/xmlConfigurationConstructor/.classpath
@@ -5,6 +5,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="C:/Users/ADMIN/Downloads/spring-aop-6.1.9.jar"/>
 	<classpathentry kind="lib" path="C:/Users/ADMIN/Downloads/commons-logging-1.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/ADMIN/Downloads/spring-context-6.0.0.jar"/>
